site/content/docs/v0.3.0/cli-reference/ark_schedule.md
---
title: "ark schedule"
layout: docs
---

Work with schedules

### Synopsis


Work with schedules

### Options inherited from parent commands

```
      --alsologtostderr                  log to standard error as well as files
      --kubeconfig string                Path to the kubeconfig file to use to talk to the Kubernetes apiserver. If unset, try the environment variable KUBECONFIG, as well as in-cluster configuration
      --log_backtrace_at traceLocation   when logging hits line file:N, emit a stack trace (default :0)
      --log_dir string                   If non-empty, write log files in this directory
      --logtostderr                      log to standard error instead of files
      --stderrthreshold severity         logs at or above this threshold go to stderr (default 2)
  -v, --v Level                          log level for V logs
      --vmodule moduleSpec               comma-separated list of pattern=N settings for file-filtered logging
```

### SEE ALSO
* [ark](ark.md)	 - Back up and restore Kubernetes cluster resources.
* [ark schedule create](ark_schedule_create.md)	 - Create a schedule
* [ark schedule delete](ark_schedule_delete.md)	 - Delete a schedule
* [ark schedule get](ark_schedule_get.md)	 - Get schedules

